Update Lora support to use Safetensors encoding
