# sdgrpcserver/generated/stablecabal.openapi.json
@@ -1715,24 +1715,28 @@
             "Lora": {
                 "type": "object",
                 "properties": {
-                    "target": {
-                        "$ref": "#/components/schemas/LoraTarget"
+                    "lora": {
+                        "$ref": "#/components/schemas/Safetensors"
                     },
-                    "tensors": {
+                    "weights": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/Tensor"
+                            "$ref": "#/components/schemas/LoraWeight"
                         }
                     }
                 }
             },
-            "LoraTarget": {
-                "type": "string",
-                "enum": [
-                    "LORA_UNET",
-                    "LORA_TEXT_ENCODER"
-                ],
-                "default": "LORA_UNET"
+            "LoraWeight": {
+                "type": "object",
+                "properties": {
+                    "modelName": {
+                        "type": "string"
+                    },
+                    "weight": {
+                        "type": "number",
+                        "format": "float"
+                    }
+                }
             },
             "MaskedAreaInit": {
                 "type": "string",
@@ -1869,6 +1873,45 @@
                     "RESCALE_FIT"
                 ],
                 "default": "RESCALE_STRICT"
+            },
+            "Safetensors": {
+                "type": "object",
+                "properties": {
+                    "metadata": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/SafetensorsMeta"
+                        }
+                    },
+                    "tensors": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/SafetensorsTensor"
+                        }
+                    }
+                }
+            },
+            "SafetensorsMeta": {
+                "type": "object",
+                "properties": {
+                    "key": {
+                        "type": "string"
+                    },
+                    "value": {
+                        "type": "string"
+                    }
+                }
+            },
+            "SafetensorsTensor": {
+                "type": "object",
+                "properties": {
+                    "key": {
+                        "type": "string"
+                    },
+                    "tensor": {
+                        "$ref": "#/components/schemas/Tensor"
+                    }
+                }
             },
             "SamplerNoiseType": {
                 "type": "string",
